--- a/chip8-final/makefile
+++ b/chip8-final/makefile
@@ -5,5 +5,8 @@ all:
 	gcc chip8.c -o chip8 $(CFlags) `sdl2-config --cflags --libs`
 
 debug:
-	gcc menu.c -o menu $(CFlags) `sdl2-config --cflags --libs` -lSDL2 -SDL2_ttf -DEDEBUG
+	gcc menu.c -o menu $(CFlags) `sdl2-config --cflags --libs` -lSDL2 -lSDL2_ttf -DEDEBUG
 	gcc chip8.c -o chip8 $(CFlags) `sdl2-config --cflags --libs` -DEDEBUG
+
+clean:
+	rm -f menu chip8
